# bevy-demo

./: .gitignore  AGENTS.md  BEVY_0.17_COMPLETION_GUIDE.md  BEVY_0.17_EVENT_SYSTEM_CLARIFICATION.md  CHECK_WORKTREE_STATUS.sh  CLAUDE.md  COMMIT_AND_MERGE.sh  COMPLETE_BEVY_0.17_INTEGRATION.sh  Cargo.toml  DEBUG_TEST_ISSUES.md  DEBUG_UI_VIEWPORT.sh  DIAGNOSE_WORKTREE.sh  FIX_AND_CONTINUE.sh  FIX_VIEWPORT_AND_MERGE.sh  INTEGRATION_SUCCESS_SUMMARY.md  MANUAL_COMMIT_STEPS.md  PARALLEL_AGENTS_STATUS_REPORT.md  README.md  RESOLVE_AND_FINISH.sh  SKILLS_ADDED.md  SKILL_TEST_CHECKLIST.md  TEST_FIX_SUMMARY.md  TILEMAP_TEST_FIX.md  UI_WIDGETS_FIXES.md  config.toml  flake.nix  game-tldr.md
.direnv/: flake-profile-6-link  flake-profile-7-link
docs/: ARCHITECTURE.md  SKILLS_AND_FEATURES.md  bevy-features-0.17.md
docs-shooter/game/: 00_INDEX.md
docs/game/: 00_INDEX.md
docs/plans/: 2025-10-27-bevy-0.17-parallel-execution-guide.md  2025-10-27-bevy-0.17-parallel-integration-design.md  2025-10-27-gameplay-event-system-modernization.md  2025-10-27-headless-testing-refactor-implementation.md  2025-10-27-parallel-agent-architecture-COMPLETE.md  2025-10-27-parallel-agent-architecture-design.md  2025-10-27-parallel-agent-architecture-implementation.md  (+7 more)
src/: animation.rs  benchmark_config.rs  camera.rs  collision.rs  config_loader.rs  configs.rs  enemy.rs  gui.rs  gun.rs  lib.rs  main.rs  particle_effects.rs  player.rs  plugin_mode.rs  resources.rs  state.rs  test_utils.rs  world.rs
tests/: tilemap_test.rs  ui_widgets_test.rs  ui_widgets_test.rs.disabled  viewport_test.rs.disabled
(+106 files in other folders)
