[package]
name = "hell-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.17.2", features = ["dynamic_linking"] }
bevy_pancam = "0.19.0"
kd-tree = "0.5.3"
rand = "0.8.5"
typenum = "1.17.0"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
