[package]
name = "hell-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
bevy = "0.17.2"
bevy_pancam = "0.19.0"
kd-tree = "0.5.3"
rand = "0.8.5"
typenum = "1.17.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
bevy_hanabi = "0.17"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
